Start write radme file, add words to txt file.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,31 @@
 # Your requirements go here
+knee
+busy
+push
+kettle
+kill
+salad
+poison
+satisfying
+weather
+indicate
+sweater
+rum 
+pilot
+teacher
+doctor
+metall
+pyramid
+football
+house
+machine
+refrigerator
+octopus
+parrot
+yellow
+mint
+rubber
+stewardess
+trousers
+rainbow
+lollipop
